# InfiniteLogic

./: .env.example  .gitignore  Dockerfile.sandbox  IMPROVEMENTS.md  PRODUCTION_ROADMAP.md  README.md  WIKI.md  ingest.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py  web_server.py
.github/workflows/: ci.yml
dashboards/: README.md  openbase.json
src/: __init__.py  agent.py  auth.py  cache.py  cli.py  config.py  llm.py  llm_client.py  logging_setup.py  metrics.py  multi_agent.py  session.py  tracing.py  usage.py  web.py
src/prompts/: __init__.py  agent.py  loader.py  multi_agent.py  rules.py
src/rag/: __init__.py  bm25_index.py  document.py  fusion.py  health.py  ingest_pipeline.py  loader.py  reranker.py  splitter.py  vectorstore.py  watcher.py
src/tools/: __init__.py  base.py  calculator.py  datetime_tool.py  file_tools.py  python_exec.py  rag_tool.py  sandbox.py  search.py
tests/: __init__.py  conftest.py  test_agent.py  test_calculator.py  test_config.py  test_file_tools.py  test_llm.py  test_session.py
