[project]
name = "InfiniteLogic"
version = "0.1.0"
description = "零框架 ReAct Agent — 纯 httpx + Qdrant + FastEmbed"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "aiosqlite>=0.19.0",
    "rich>=13.0.0",
    "fastembed>=0.3.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.0.0",
    "docx2txt>=0.8",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=6.0.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "loguru>=0.7.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "streamlit>=1.32.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# ruff — Lint + 格式化
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "B008",  # do-not-perform-function-calls-in-argument-defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy — 静态类型检查
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest — 测试
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
